# aoc-python-template

./: .env.example  .gitignore  .mise.toml  README.md  pyproject.toml
.claude/: settings.local.json
mise-tasks/: day.py  input.py  solve.sh  test.sh
solutions/: __init__.py  day01.py
utils/: helpers.py
