[project]
name = "aoc-template"
version = "2024.0"
description = "Advent of Code Python Template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advent-of-code-data>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["solutions"]
python_files = "day*.py"
addopts = [
    "--doctest-modules",
    "--doctest-report=ndiff",
    "-v",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
